Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
             <label for="menu">
                 <span class="cabecario__menu_hamburguer container_imagem"></span>
             </label>
-            <ul class="lita-menu">
+
+            <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Programação</a>
                 </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-End</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Designer e UX</a>
+                </li>
+
+
 
             </ul>
             <img src="/assets/img/Logo.svg" alt="logo AluraBooks" class=container_imagem>
