Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Designer e UX</a>
                 </li>
-
-
-
             </ul>
             <img src="/assets/img/Logo.svg" alt="logo AluraBooks" class=container_imagem>
         </div>
@@ -52,6 +49,12 @@
         </div>
     </header>
 
+    <section class="banner">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
 
 </body>
 
