Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
     </header>
     <!-- End header -->
+
     <!-- Start banner -->
     <section class="banner">
         <h2 class="banner__titulo">Já sabe por onde começar?</h2>
@@ -58,6 +59,7 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
     <!-- End banner -->
+
     <!-- Start Carrosel Ultimos Lançamentos -->
     <section class="carrossel">
         <h2 class="carrossel__titulo">últimos Lançamentos</h2>
@@ -107,6 +109,7 @@
         </div>
     </section>
     <!-- End Carrosel Ultimos Lançamentos -->
+
     <!-- Start Mais vendidosos escritores -->
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
@@ -159,6 +162,7 @@
         </div>
     </section>
     <!-- End Mais vendidosos escritores -->
+
     <!-- Start topicos visitados -->
     <section class="topico">
         <h2 class="topico__titulo">TOPICOS VISITADOS RECENTEMENTE</h2>
@@ -176,7 +180,20 @@
     </section>
     <!-- End topicos visitados -->
 
+    <!-- Start newsletter -->
+    <section class="newsletter">
+        <h2 class="newsleter__titulo">Fique por dentro das novidades!</h2>
+        <p class="newsletter__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" class="newletter__email" placeholder="Cadastre seu email">
+    </section>
+    <hr />
+    <!-- End newsletter -->
 
+    <!-- Start footer -->
+    <footer class="footer">
+        <h2 class="footer__titulo">Grupo Alura</h2>
+    </footer>
+    <!-- End footer -->
 
 
 
