--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -41,12 +43,43 @@
                     <a href="#" class="lista-menu__link">Designer e UX</a>
                 </li>
             </ul>
-            <img src="/assets/img/Logo.svg" alt="logo AluraBooks" class=container_imagem>
+            <img src="/assets/img/Logo.svg" alt="logo AluraBooks" class="container_imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-End</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Designer e UX</a>
+                </li>
+            </ul>
+
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+
+        </ul>
         <div class="container">
-            <a href="#"><img src="/assets/img/Favoritos.svg" alt="Favoritos" class=container_imagem></a>
-            <a href="#"><img src="/assets/img/Compras.svg" alt="Compras" class=container_imagem></a>
-            <a href="#"><img src="/assets/img/Usuario.svg" alt="Usuário" class=container_imagem></a>
+            <a href="#"><img src="/assets/img/Favoritos.svg" alt="Favoritos"
+                    class="container_imagem container__transparente"></a>
+            <a href="#"><img src="/assets/img/Compras.svg" alt="Compras" class="container_imagem"></a>
+            <a href="#"><img src="/assets/img/Usuario.svg" alt="Usuário" class="container_imagem"></a>
         </div>
     </header>
     <!-- End header -->
