--- a/index.html
+++ b/index.html
@@ -215,8 +215,10 @@
 
     <!-- Start newsletter -->
     <section class="newsletter">
-        <h2 class="newsleter__titulo">Fique por dentro das novidades!</h2>
-        <p class="newsletter__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div class="newsletter__descricao">
+            <h2 class="newsleter__titulo">Fique por dentro das novidades!</h2>
+            <p class="newsletter__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" class="newletter__email" placeholder="Cadastre seu email">
     </section>
     <hr />
