Atualização de projeto

--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
         <div class="container">
             <a href="#"><img src="/assets/img/Favoritos.svg" alt="Favoritos"
                     class="container_imagem container__transparente"></a>
-            <a href="#"><img src="/assets/img/Compras.svg" alt="Compras" class="container_imagem"></a>
-            <a href="#"><img src="/assets/img/Usuario.svg" alt="Usuário" class="container_imagem"></a>
+            <a href="#" class="container__link">
+                <img src="/assets/img/Compras.svg" alt="Compras" class="container_imagem"></a>
+                <p class="container__text">Minha sacola</p>
+
+            <a href="#" class="container__link">
+                <img src="/assets/img/Usuario.svg" alt="Usuário" class="container_imagem"></a>
+                <p class="container__text">Meu perfil</p>
         </div>
     </header>
     <!-- End header -->
@@ -227,6 +232,96 @@
     <!-- Start footer -->
     <footer class="footer">
         <h2 class="footer__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__title">EDUACAOÇÃO</li>
+            <li class="lista-rodape__item">
+                <img src="/assets/img/Caelum.svg" alt="Logotipo caelum">
+                <a href="#" class="lista-rodape__link">Caelum</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="/assets/img/CasaDoCodigo.svg" alt="Logotipo Casa do codigo">
+                <a href="#" class="lista-rodape__link">Casa do codigo</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__title">EDUACAÇÃO ONLINE</li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/Alura.svg" alt="Logotipo Alura">
+                <a href="#" class="lista-rodape__link">Alura</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/AluraEmpresas.svg" alt="Logotipo Alura para empresas">
+                <a href="#" class="lista-rodape__link">Alura para Empresas</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/AluraLATAM.svg" alt="Logotipo Alura latem">
+                <a href="#" class="lista-rodape__link">Alura Latam</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/AluraStart.svg" alt="Logotipo Alura Start">
+                <a href="#" class="lista-rodape__link">Alura Start</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/MusicDot.svg" alt="Logotipo MusicDot">
+                <a href="#" class="lista-rodape__link">MusicDot</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/AluraLingua.svg" alt="Logotipo Alura Lingua">
+                <a href="#" class="lista-rodape__link">Alura Lingua</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/PM3.svg" alt="Logotipo PM3">
+                <a href="#" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__title">COMUNIDADE</li>
+            
+            <li class="lista-rodape__item">
+                <img src="/assets/img/HipstersTech.svg" alt="Logotipo HipstersTech">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/ScubaDev.svg" alt="Logotipo ScubaDev">
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/LayersTech.svg" alt="Logotipo LayersTech">
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/LikeABoss.svg" alt="Logotipo LikeABoss">
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/CarreiraSemFronteira.svg" alt="Logotipo Carreira Sem Fronteira">
+                <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/HipstersJobs.svg" alt="Logotipo Hipsters Jobs">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+            </li>
+
+            <li class="lista-rodape__item">
+                <img src="/assets/img/GUJ.svg" alt="Logotipo GUJ">
+                <a href="#" class="lista-rodape__link">GUJ</a>
+            </li>
+        </ul>
+
     </footer>
     <!-- End footer -->
 
