--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecario__menu_hamburguer container_imagem"></span>
             </label>
 
@@ -49,7 +49,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
 
@@ -80,11 +80,11 @@
                     class="container_imagem container__transparente"></a>
             <a href="#" class="container__link">
                 <img src="/assets/img/Compras.svg" alt="Compras" class="container_imagem"></a>
-                <p class="container__text">Minha sacola</p>
+            <p class="container__text">Minha sacola</p>
 
             <a href="#" class="container__link">
                 <img src="/assets/img/Usuario.svg" alt="Usuário" class="container_imagem"></a>
-                <p class="container__text">Meu perfil</p>
+            <p class="container__text">Meu perfil</p>
         </div>
     </header>
     <!-- End header -->
@@ -103,46 +103,52 @@
         <h2 class="carrossel__titulo">últimos Lançamentos</h2>
 
         <!-- Start Slider main container -->
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/img/livros/Acessibilidade.svg"
-                        alt="Livro sobre Acessibilidade">
-                </div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Angular.svg" alt="Livro sobre Empresas"></div>
-                <div class="swiper-slide"><img src="./assets/img/livros/ApacheKafka.svg" alt="Livro sobre ApacheKafkas">
-                </div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Gestão.svg" alt="Livro sobre Gestão"></div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Gestão2.svg" alt="Livro sobre Gestao 2"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./assets/img/livros/Acessibilidade.svg"
+                            alt="Livro sobre Acessibilidade">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Angular.svg" alt="Livro sobre Empresas">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/ApacheKafka.svg"
+                            alt="Livro sobre ApacheKafkas">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Gestão.svg" alt="Livro sobre Gestão"></div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Gestão2.svg" alt="Livro sobre Gestao 2">
+                    </div>
 
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
+            <!-- End Slider main container -->
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <!-- End Slider main container -->
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descicao__titulo">Talves você se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descicao__titulo">Talves você se interesse também por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img src="/assets/img/Angularlogo.svg" alt="Logo Angular" class="descricao__imagem">
                 </div>
-                <img src="/assets/img/Angularlogo.svg" alt="Logo Angular" class="descricao__imagem">
-            </div>
 
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar Livro"></li>
-                    <li class="botoes__item"><img src="/assets/img/Compras.svg" alt="Adicionar carinho de compras"></li>
-                </ul>
-                <a href="" class="botoes__ancora">Saiba mais</a>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar Livro"></li>
+                        <li class="botoes__item"><img src="/assets/img/Compras.svg" alt="Adicionar carinho de compras">
+                        </li>
+                    </ul>
+                    <a href="" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -152,50 +158,57 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
         <!-- Start Slider main container -->
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/img/livros/Acessibilidade.svg"
-                        alt="Livro sobre Acessibilidade">
-                </div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Angular.svg" alt="Livro sobre Empresas"></div>
-                <div class="swiper-slide"><img src="./assets/img/livros/ApacheKafka.svg" alt="Livro sobre ApacheKafkas">
-                </div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Gestão.svg" alt="Livro sobre Gestão"></div>
-                <div class="swiper-slide"><img src="./assets/img/livros/Gestão2.svg" alt="Livro sobre Gestao 2"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./assets/img/livros/Acessibilidade.svg"
+                            alt="Livro sobre Acessibilidade">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Angular.svg" alt="Livro sobre Empresas">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/ApacheKafka.svg"
+                            alt="Livro sobre ApacheKafkas">
+                    </div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Gestão.svg" alt="Livro sobre Gestão"></div>
+                    <div class="swiper-slide"><img src="./assets/img/livros/Gestão2.svg" alt="Livro sobre Gestao 2">
+                    </div>
 
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <!-- End Slider main container -->
+            <!-- End Slider main container -->
 
 
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <img src="/assets/img/Estrelinhas.svg" alt="Classificação 5 estrelas escritora"
-                        class="descricao__estrelas">
-                    <h3 class="descicao__titulo">Autora do Mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <img src="/assets/img/Estrelinhas.svg" alt="Classificação 5 estrelas escritora"
+                            class="descricao__estrelas">
+                        <h3 class="descicao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <img src="/assets/img/Perfil-escritora 1.svg" alt="Logo Angular" class="descricao__imagem">
                 </div>
-                <img src="/assets/img/Perfil-escritora 1.svg" alt="Logo Angular" class="descricao__imagem">
-            </div>
 
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar Livro"></li>
-                    <li class="botoes__item"><img src="/assets/img/Compras.svg" alt="Adicionar carinho de compras"></li>
-                </ul>
-                <a href="" class="botoes__ancora">Saiba mais</a>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar Livro"></li>
+                        <li class="botoes__item"><img src="/assets/img/Compras.svg" alt="Adicionar carinho de compras">
+                        </li>
+                    </ul>
+                    <a href="" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -285,7 +298,7 @@
 
         <ul class="lista-rodape">
             <li class="lista-rodape__title">COMUNIDADE</li>
-            
+
             <li class="lista-rodape__item">
                 <img src="/assets/img/HipstersTech.svg" alt="Logotipo HipstersTech">
                 <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
